<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Money Cruncher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">WELCOME!</string>
    <string name="success">Success</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="title_activity_account">Your Accounts</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_create_account">Create a New Account</string>
    <string name="title_deposit">Deposit</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_displayname">Display Name</string>
    <string name="prompt_balance">Balance</string>
    <string name="prompt_interest">Interest</string>
    <string name="prompt_source">Source</string>
    <string name="prompt_date1">Select Start Date and End Date below</string>
    <string name="prompt_amount">Amount</string>
    <string name="prompt_reason">Reason</string>
    <string name="prompt_category">Category</string>
    <string name="title_activity_display_account">DisplayAccountActivity</string>
    <string name="balance">Balance:</string>
    <string name="interest">Interest:</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdraw</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="title_activity_deposit">Deposit</string>
    <string name="title_activity_withdraw">Withdraw</string>
    <string name="generate_reports">Generate Report(s)</string>
    <string name="title_activity_report">Select a Report</string>
    <string name="title_activity_spending_category_report">Spending Category Report</string>
    <string name="title_activity_cash_flow_report">Cash Flow Report</string>
    <string name="rent">Rent</string>
    <string name="food">Food</string>
    <string name="clothes">Clothes</string>
    <string name="entertainment">Entertainment</string>
    <string name="total">Total</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="category_prompt">Choose a category</string>
    <string name="info">Click an account to get started</string>

    <string-array name="category_arrays">
        <item>Rent</item>
        <item>Food</item>
        <item>Clothes</item>
        <item>Entertainment</item>
    </string-array>

    <string name="report_prompt">Choose a Report</string>

    <string-array name="report_arrays">
        <item>Spending Category Report</item>
        <item>Cash Flow Report</item>
    </string-array>

</resources>
